// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows setting props on label 1`] = `
<label
  aria-label="custom label"
  className="sc-bczRLJ XfrOB"
>
  <input
    className="sc-gsnTZi dskNep"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox handles disabled state 1`] = `
<label
  className="sc-bczRLJ jDFcYw"
>
  <input
    className="sc-gsnTZi dJvfbo"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox handles options 1`] = `
<label
  className="sc-bczRLJ XfrOB"
>
  <input
    className="sc-gsnTZi dskNep"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox matches snapshot 1`] = `
<label
  className="sc-bczRLJ fIuhsq"
>
  <input
    className="sc-gsnTZi ehAXiz"
    type="checkbox"
  />
  Click Me
</label>
`;
